[package]
name = "raytracing"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rayon = "1.7.0"
rand = "0.8.5"
indicatif = { version = "0.17.6", features = ["rayon"] }
itertools = "0.12.1"
image = "0.24.7"
glam = { version = "0.24.1", features = ["rand"] }

# [profile.release]
# debug = true